<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="60dp">

            <include layout="@layout/filter_common" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minExperience"
                android:text="@string/age" />

            <EditText
                android:id="@+id/minAge"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewAge"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/textViewAgeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewAge"
                android:layout_alignBaseline="@+id/minAge"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/minAge"
                android:text="@string/to"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/maxAge"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewAge"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textViewAgeTo"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="@dimen/textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewAge"
                android:layout_alignBaseline="@+id/minAge"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/maxAge"
                android:text="@string/years"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkboxMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minAge"
                android:checked="true"
                android:text="@string/male" />

            <CheckBox
                android:id="@+id/checkboxFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minAge"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/checkboxMale"
                android:checked="true"
                android:text="@string/female" />
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnApplyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@color/btnColor"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/applyFilters"
        android:textColor="@color/textWhite" />
</FrameLayout>
