<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/who_description"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_above="@id/radioGroupWho"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />

    <RadioGroup
        android:id="@+id/radioGroupWho"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/sort_button_background"
        android:checkedButton="@+id/emp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/emp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_state_color"
            android:button="@null"
            android:gravity="center"
            android:text="@string/jobseeker"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/biz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_state_color"
            android:button="@null"
            android:gravity="center"
            android:text="@string/businessOwner"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/btnColor"
        android:text="@string/login"
        android:textColor="@color/textWhite" />

</RelativeLayout>